# asaedrm

./: Cargo.toml  Dockerfile  README.md  bun.lockb  index.html  package-lock.json  package.json
src/: App.tsx  main.rs
src/components/: mod.rs  skill_badge.rs  skill_modal.rs
src/data/: mod.rs  skills.rs
src/icons/: AngularIcon.tsx  BunIcon.tsx  NestJSIcon.tsx  NodeJSIcon.tsx  ReactIcon.tsx
src/pages/components/: CommandSearch.tsx  DrawerSkills.tsx  IconsSelectedSkill.tsx  LayoutSkeleton.tsx  SkillCard.tsx  SpecializationCard.tsx
src/pages/constants/: LayoutHomeConsts.ts  skillsConsts.ts
src/pages/hooks/: useLayoutHome.ts  useMediaQuery.ts
src/pages/layout/: LayoutHome.tsx
src/pages/styles/: cardStyles.ts
style/: input.css  output.css
